--- a/mousemove/index.html
+++ b/mousemove/index.html
@@ -11,6 +11,7 @@
     <div id="center">
         
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
